grabdish/frontend-helidon/frontend-helidon-deployment-2021-03-06_20:11:12.yaml

##
## Copyright (c) 2021 Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-helidon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: helidon-mp
    spec:
      containers:
      - name: frontend
        image: %DOCKER_REGISTRY%/frontend-helidon:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
