grabdish/frontend-helidon/frontendnp-service-nodeport.yaml

##
## Copyright (c) 2021 Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
apiVersion: v1
kind: Service
metadata:
  name: frontendnp
  labels:
    app: frontend
  #annotations:
  #  service.beta.kubernetes.io/oci-load-balancer-ssl-ports: "443"
  #  service.beta.kubernetes.io/oci-load-balancer-tls-secret: ssl-certificate-secret
spec:
  type: NodePort
  ports:
    - port: 8080
      name: metrics
      targetPort: 8080
  selector:
    app: frontend
