grabdish/frontend-helidon/frontend-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grabdish-frontend-ingress
  namespace: msdataworkshop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/backend-protocol: "https"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  tls:
  - secretName: ssl-certificate-secret
  rules:
  - http:
      paths:
#      - path: /
      - path: /grabdish
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
